--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
 }
 
 android {
@@ -45,7 +47,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
@@ -55,6 +57,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //fgchecker
+//    implementation 'com.rvalerio:fgchecker:1.1.0'
+
+//    implementation 'com.txusballesteros:FitChart:1.0'
+
     def lottieVersion = "3.4.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
@@ -62,8 +74,7 @@ dependencies {
 
     implementation "com.google.android.material:material:1.8.0-alpha01"
 
-    //On-Boarding
-//    implementation 'com.github.akshaaatt:Onboarding:1.0.4'
+
 
     //Circular Image view
     implementation "de.hdodenhof:circleimageview:3.1.0"
@@ -86,5 +97,16 @@ dependencies {
 
     //curves
     implementation 'io.github.florent37:shapeofview:1.4.7'
+
+//    fitchart
+//    implementation( 'com.txusballesteros:FitChart:1.0')
+
+
+
+
+
+
+
+
 
 }
